# low-latency-message-bus

./: CMakeLists.txt  README.md
include/: broker.h  consumer.h  json_serializer.h  producer.h  tcp_handler.h  udp_handler.h
src/: broker.cpp  consumer.cpp  json_serializer.cpp  main.cpp  producer.cpp
tests/: broker_tests.cpp  consumer_producer_tests.cpp  json_serializer_tests.cpp
